Added bg color, Insta link, new text

--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
   <title> Raichu </title>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header> Meet Doge McDogerson
-<img src="Images/Doge.jpg">
+<header> Welcome to my page!
+<img class="eevee" src="Images/Doge.jpg">
 </header>
-<main> See Eevee Doge Run </main>
+<main> This is Eevee Doge, my German Shepherd Dog, or GSD.
+  She is a very good girl, but can get into trouble at times!
+She loves to play with the hose, and will try to bite the stream of water.
+Her color is purple, because her parents' owners had named her Violet.
+Someone had adopted her before us, but brought her back to the owners a week later because their dog did not get along with her.
+My partner and I adopted her at 11 weeks, and she is now 2 years old! It's hard to believe.
+Eevee can be very shy and suspicious of new things and people, but once she gets to know you she is excited to see you! </main>
 <footer>
-  <a href="https://google.com">Google</a>
+  <a href="https://www.instagram.com/waterlorelei/">Eevee's Instagram</a>
  </body>
 </html>
